# cpp_click

./: .gitignore  CMakeLists.txt  LICENSE  OPEN_ISSUES.md  README.md  conanfile.py
include/: click.hpp  clickOption.hpp  utils.hpp
src/: argument.hpp  base.hpp  click.cpp  click.hpp  clickArgument.cpp  clickOption.cpp  option.hpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: example.cpp
tests/: test_click.cpp  test_click_argument.cpp  test_click_option.cpp  testmain.cpp
